# Binary-Codec

./: Cargo.toml  LICENSE.md  README.md
binary-codec/: Cargo.toml  README.md
binary-codec-derive/: Cargo.toml
binary-codec-derive/src/: lib.rs
binary-codec/src/: config.rs  dyn_int.rs  dynamics.rs  encodings.rs  fixed_int.rs  lib.rs  serializers.rs  utils.rs  variable.rs
binary-codec/src/tests/: mod.rs
tests/: Cargo.toml
tests/src/: lib.rs  out.rs
