[package]
name = "binary-codec-derive"
version = "0.2.6"
edition = "2024"
license = "MIT"
homepage = "https://github.com/maurictg/Binary-Codec"
repository = "https://github.com/maurictg/Binary-Codec"
readme = "../README.md"
description = "Derive crate for the binary-codec crate"
authors = ["maurictg"]
keywords = ["binary", "codec", "serialization", "deserialization"]
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"